@@ -1,3 +1,10 @@
+Thu Mar 25 13:55:02 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/dds/DomainParticipant.h:
+        * connectors/dds4ccm/impl/dds/DomainParticipant.cpp:
+          Created administration for topic reuse. This should solve
+          the shutdown errors of the hello example.
+
 Thu Mar 25 12:32:13 UTC 2010  Martin Corino <mcorino@remedy.nl>
 
         * EM-Redeployment:
@@ -22,7 +29,7 @@ Thu Mar 25 12:32:13 UTC 2010  Martin Corino <mcorino@remedy.nl>
         * EM-Launch-Failures/5NodeFailureAtActivate.cdp:
         * EM-Launch-Failures/README:
         Added test for redeployments after launch failures.
-        
+
 Thu Mar 25 12:14:57 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/performance-tests/Throughput/descriptors/Plan_pub.cdp:
